package com.directi.training.isp.exercise_refactored;

/** Only what every door can do. */
public interface Door
{
    void lock();

    void unlock();

    void open();

    void close();
}
