package com.directi.training.isp.exercise_refactored;

public interface ProximityListener
{
    void proximityCallback();
}
