package com.directi.training.isp.exercise_refactored;

public interface TimeOutListener
{
    void timeOutCallback();
}
